src/snapshots/templates__test__error_unknown_keyword.snap
---
source: src/main.rs
assertion_line: 1064
expression: "Hello {% wrong %}"

---
Unknown keyword: wrong

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% wrong %}
  │          ^^^^^


